--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "standalone ReactCSSTransitionGroup implement",
   "main": "lib/index.js",
   "scripts": {
+    "lint": "eslint src",
     "build": "babel src -d lib"
   },
   "repository": {
@@ -25,6 +26,9 @@
     "babel-cli": "^6.22.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0"
+    "babel-preset-stage-0": "^6.22.0",
+    "eslint": "^3.15.0",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
