--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,14 @@
 {
   "extends": [
-    "airbnb-base"
-  ]
+    "defaults"
+  ],
+  "parser": "babel-eslint",
+  "env": {
+    "node": true,
+    "browser": true,
+    "es6": true
+  },
+  "rules": {
+    "comma-dangle": ["error", "always-multiline"]
+  }
 }
