--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   },
   "homepage": "https://github.com/springuper/react-css-transition-group#readme",
   "peerDependencies": {
-    "fbjs": "^0.8.5",
     "react": "^15.3.2"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.22.2",
+    "babel-eslint": "^7.1.1",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "eslint": "^3.15.0",
     "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-import": "^2.2.0"
   }
 }
