--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint": "^3.15.0",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-plugin-import": "^2.2.0"
+  },
+  "dependencies": {
+    "prop-types": "^15.5.7"
   }
 }
