--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
+    "create-react-class": "^15.5.2",
     "prop-types": "^15.5.7"
   }
 }
